validation tweaks, some cleanup

--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -76,34 +76,25 @@
     <fieldset class="form-group">
         <legend>Radio buttons</legend>
         <div class="form-check">
-            <label class="form-check-label">
-                <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-                Option one is this and that&mdash;be sure to include why it's great
-            </label>
+            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+            <label for="optionsRadios1" class="form-check-label">Option one is this and that&mdash;be sure to include why it's great</label>
         </div>
         <div class="form-check">
-            <label class="form-check-label">
-                <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2" value="option2">
-                Option two can be something else and selecting it will deselect option one
-            </label>
+            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2" value="option2">
+            <label for="optionsRadios2" class="form-check-label">Option two can be something else and selecting it will deselect option one</label>
         </div>
         <div class="form-check disabled">
-            <label class="form-check-label">
-                <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios3" value="option3" disabled>
-                Option three is disabled
-            </label>
+            <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios3" value="option3" disabled>
+            <label for="optionsRadios3" class="form-check-label">Option three is disabled</label>
         </div>
     </fieldset>
-    <div class="form-group">
+    <fieldset class="form-group">
+        <legend>Checkbox</legend>
         <div class="form-check">
-            <fieldset>
-                <legend>Checkbox</legend>
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input"> Check me out
-                </label>
-            </fieldset>
+            <input id="check1" type="checkbox" class="form-check-input">
+            <label for="check"1" class="form-check-label"> Check me out</label>
         </div>
-    </div>
+    </fieldset>
     <div class="form-group">
         <label for="formControlRange">Example Range input</label>
         <input type="range" id="formControlRange">
