--- a/test/visual/form-validation.html
+++ b/test/visual/form-validation.html
@@ -218,6 +218,13 @@
         <textarea class="form-control is-invalid" id="validate-textarea" rows="3" placeholder="Required example textarea" required></textarea>
         <div class="invalid-feedback">Please enter a message in the textarea.</div>
     </div>
+    <div class="form-group">
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="customControlValidation-1" required>
+            <label class="form-check-label" for="customControlValidation-1">Agree to terms and conditions</label>
+            <div class="invalid-feedback">You must agree before submitting.</div>
+        </div>
+    </div>
     <div class="form-check form-switch mb-1">
         <input type="checkbox" class="form-check-input" id="customControlValidation0" required>
         <label class="form-check-label" for="customControlValidation0">Check this custom checkbox</label>
