some tweaks, and start updating doc

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1015,88 +1015,32 @@ Showing a <kbd>kdb sample</kbd>
 
 <h3>Inline checkbox/radio</h3>
 <div>
-  <div class="form-check form-check-inline">
-    <label class="form-check-label">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1"> 1
-    </label>
+  <div class="form-check d-inline-block me-1">
+    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+    <label class="form-check-label" for="inlineCheckbox1">1</label>
   </div>
-  <div class="form-check form-check-inline">
-    <label class="form-check-label">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2"> 2
-    </label>
+  <div class="form-check d-inline-block me-1">
+    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+    <label class="form-check-label" for="inlineCheckbox2">2</label>
   </div>
-  <div class="form-check form-check-inline disabled">
-    <label class="form-check-label">
-      <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled> 3
-    </label>
+  <div class="form-check d-inline-block">
+    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled>
+    <label class="form-check-label" for="inlineCheckbox3">3</label>
   </div>
 </div>
 
 <div>
-  <div class="form-check form-check-inline">
-    <label class="form-check-label">
-      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
-    </label>
+  <div class="form-check d-inline-block me-1">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+    <label class="form-check-label" for="inlineRadio1">1</label>
   </div>
-  <div class="form-check form-check-inline">
-    <label class="form-check-label">
-      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
-    </label>
+  <div class="form-check d-inline-block me-1">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+    <label class="form-check-label" for="inlineRadio2">2</label>
   </div>
-  <div class="form-check form-check-inline disabled">
-    <label class="form-check-label">
-      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" disabled> 3
-    </label>
-  </div>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <div class="form-group row">
-        <div class="col-sm-2">Criteria 1:
-        </div>
-        <div class="col-sm-10 form-check-inline">
-          <label class="form-check-label"><input class="form-check-input" type="checkbox" value="yes"> Yes, I want!</label>
-        </div>
-      </div>
-      <div class="form-group row">
-        <div class="col-sm-2">Criteria 2:
-        </div>
-        <div class="col-sm-10 form-check-inline">
-          <label class="form-check-label"><input class="form-check-input" type="checkbox" value="yes"> Yes, it's me: <a href="mailto:john@doe.com">john@doe.com</a></label>
-        </div>
-      </div>
-      <div class="form-group row">
-        <div class="col-sm-2">Criteria 3:
-        </div>
-        <div class="col-sm-10 form-check-inline">
-          <label class="form-check-label"><input class="form-check-input" type="checkbox" value="yes"> Yes, I <em>really</em> want it!</label>
-        </div>
-      </div>
-      <div class="form-group row">
-        <div class="col-sm-2">Criteria 4:
-        </div>
-        <div class="col-sm-10 form-check-inline">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox4-1" value="option1"> 1
-          </label>
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox4-2" value="option2"> 2<em>italic</em>
-          </label>
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox4-3" value="option3"> 3
-          </label>
-        </div>
-      </div>
-      <div class="form-group row">
-        <div class="col-sm-2">Criteria 5:
-        </div>
-        <div class="col-sm-10 form-check-inline">
-          <label class="form-check-label disabled"><input class="form-check-input" type="checkbox" value="yes" disabled> Yes, I <em>really</em> want it!</label>
-        </div>
-      </div>
-    </div>
+  <div class="form-check d-inline-block">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" disabled>
+    <label class="form-check-label" for="inlineRadio3">3</label>
   </div>
 </div>
 
