--- a/test/visual/form-check.html
+++ b/test/visual/form-check.html
@@ -207,6 +207,21 @@
     <label class="form-check-label" for="inline3">Inline custom switch</label>
 </div>
 
+<h2>Sizing</h2>
+
+<div class="form-check form-checkradio fs-xlarge">
+    <input class="form-check-input" type="checkbox" id="resize0" checked>
+    <label class="form-check-label" for="resize0">Resized custom checkbox</label>
+</div>
+<div class="form-check form-checkradio fs-xlarge">
+    <input class="form-check-input" type="radio" id="resize1" checked>
+    <label class="form-check-label" for="resize1">Resized custom radio</label>
+</div>
+<div class="form-check form-switch fs-xlarge">
+    <input class="form-check-input" type="checkbox" id="resize2" checked>
+    <label class="form-check-label" for="resize2">Resized custom switch</label>
+</div>
+
 </div>
 
 <script>
