--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -144,15 +144,11 @@
 <div class="mb-1">
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-        <label class="form-check-label" for="defaultCheck1">
-            Default checkbox
-        </label>
+        <label class="form-check-label" for="defaultCheck1">Default checkbox</label>
     </div>
     <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="defaultCheck2" disabled>
-        <label class="form-check-label" for="defaultCheck2">
-            Disabled checkbox
-        </label>
+        <input class="form-check-input" type="checkbox" value="" id="defaultCheck3" disabled>
+        <label class="form-check-label" for="defaultCheck3">Disabled checkbox</label>
     </div>
 </div>
 
@@ -160,35 +156,29 @@
 <div class="mb-1">
     <div class="form-check">
         <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-        <label class="form-check-label" for="exampleRadios1">
-            Default radio
-        </label>
+        <label class="form-check-label" for="exampleRadios1">Default radio</label>
     </div>
     <div class="form-check">
         <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-        <label class="form-check-label" for="exampleRadios2">
-            Second default radio
-        </label>
+        <label class="form-check-label" for="exampleRadios2">Second default radio</label>
     </div>
     <div class="form-check disabled">
         <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" disabled>
-        <label class="form-check-label" for="exampleRadios3">
-            Disabled radio
-        </label>
+        <label class="form-check-label" for="exampleRadios3">Disabled radio</label>
     </div>
 </div>
 
 <h2>Checkbox (inline)</h2>
 <div class="mb-1">
-    <div class="form-check form-check-inline">
+    <div class="form-check d-inline-block me-1">
         <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
         <label class="form-check-label">1</label>
     </div>
-    <div class="form-check form-check-inline">
+    <div class="form-check d-inline-block me-1">
         <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
         <label class="form-check-label">2</label>
     </div>
-    <div class="form-check form-check-inline disabled">
+    <div class="form-check d-inline-block">
         <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled>
         <label class="form-check-label">3</label>
     </div>
@@ -196,15 +186,15 @@
 
 <h2>Radio (inline)</h2>
 <div class="mb-1">
-    <div class="form-check form-check-inline">
+    <div class="form-check d-inline-block me-1">
         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
         <label class="form-check-label">1</label>
     </div>
-    <div class="form-check form-check-inline">
+    <div class="form-check d-inline-block me-1">
         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
         <label class="form-check-label">2</label>
     </div>
-    <div class="form-check form-check-inline disabled">
+    <div class="form-check d-inline-block">
         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" disabled>
         <label class="form-check-label">3</label>
     </div>
