--- a/test/visual/form-range.html
+++ b/test/visual/form-range.html
@@ -4,30 +4,19 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Figuration - Custom Range</title>
+<title>Figuration - Form Range</title>
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
 <script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
 <script src="../../dist/js/figuration.js"></script>
 
-<style>
-.select-sizing .btn {
-    vertical-align: top;
-}
-
-.form-control + .form-control,
-.custom-select + .custom-select {
-    margin-top: .5rem;
-}
-</style>
-
 </head>
 <body>
 
 <div class="container">
 
-<h1>Custom Range</h1>
+<h1>Form Range</h1>
 
 <div class="mb-1">
     <div>
@@ -37,24 +26,24 @@
 </div>
 <div class="mb-1">
     <label for="customRange1">Example range</label>
-    <input type="range" class="custom-range" id="customRange1">
+    <input type="range" class="form-range" id="customRange1">
 </div>
 <div class="mb-1">
     <label for="customRange2">Example range - range 0-5</label>
-    <input type="range" class="custom-range" min="0" max="5" value="1" id="customRange2">
+    <input type="range" class="form-range" min="0" max="5" value="1" id="customRange2">
 </div>
 <div class="mb-1">
     <label for="customRange3">Example range - range 0-5 + step 0.5</label>
-    <input type="range" class="custom-range" min="0" max="5" step="0.5" value="2.5" id="customRange3">
+    <input type="range" class="form-range" min="0" max="5" step="0.5" value="2.5" id="customRange3">
 </div>
 <div class="mb-1">
     <label for="customRange4">Disabled</label>
-    <input type="range" class="custom-range" id="customRange4" disabled>
+    <input type="range" class="form-range" id="customRange4" disabled>
 </div>
 <div class="for-group form-row">
     <label for="customRange5" class="col-sm-2 mb-0">Example range</label>
     <div class="col-sm-10">
-        <input type="range" class="custom-range" id="customRange5">
+        <input type="range" class="form-range" id="customRange5">
     </div>
 </div>
 
