--- a/test/visual/form-validation.html
+++ b/test/visual/form-validation.html
@@ -106,9 +106,12 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="custom-file">
-            <input type="file" class="custom-file-input" id="validateFile1" required>
-            <label class="custom-file-label" for="validateFile1">Choose file...</label>
+        <div class="form-file">
+            <input type="file" class="form-file-input" id="validateFile1" required>
+            <label class="form-file-label" for="validateFile1">
+                <span class="form-file-text">Choose file...</span>
+                <span class="form-file-button">Browse</span>
+            </label>
             <div class="invalid-feedback">Example invalid feedback.</div>
         </div>
     </div>
@@ -187,9 +190,12 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="custom-file">
-            <input type="file" class="custom-file-input is-invalid" id="validateFile2">
-            <label class="custom-file-label" for="validateFile2">Choose file...</label>
+        <div class="form-file">
+            <input type="file" class="form-file-input is-invalid" id="validateFile2" required>
+            <label class="form-file-label" for="validateFile2">
+                <span class="form-file-text">Choose file...</span>
+                <span class="form-file-button">Browse</span>
+            </label>
             <div class="invalid-feedback">Example invalid feedback.</div>
         </div>
     </div>
@@ -212,31 +218,34 @@
         <textarea class="form-control is-invalid" id="validate-textarea" rows="3" placeholder="Required example textarea" required></textarea>
         <div class="invalid-feedback">Please enter a message in the textarea.</div>
     </div>
-    <div class="custom-control custom-switch mb-1">
-        <input type="checkbox" class="custom-control-input" id="customControlValidation0" required>
-        <label class="custom-control-indicator" for="customControlValidation0"></label>
-        <label class="custom-control-label" for="customControlValidation0">Check this custom checkbox</label>
+    <div class="form-group">
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="customControlValidation-1" required>
+            <label class="form-check-label" for="customControlValidation-1">Agree to terms and conditions</label>
+            <div class="invalid-feedback">You must agree before submitting.</div>
+        </div>
+    </div>
+    <div class="form-check form-switch mb-1">
+        <input type="checkbox" class="form-check-input" id="customControlValidation0" required>
+        <label class="form-check-label" for="customControlValidation0">Check this custom checkbox</label>
         <div class="invalid-feedback">Example invalid feedback text</div>
     </div>
-    <div class="custom-control custom-checkbox mb-1">
-        <input type="checkbox" class="custom-control-input" id="customControlValidation1" required>
-        <label class="custom-control-indicator" for="customControlValidation1"></label>
-        <label class="custom-control-label" for="customControlValidation1">Check this custom checkbox</label>
+    <div class="form-check form-checkradio mb-1">
+        <input type="checkbox" class="form-check-input" id="customControlValidation1" required>
+        <label class="form-check-label" for="customControlValidation1">Check this custom checkbox</label>
         <div class="invalid-feedback">Example invalid feedback text</div>
     </div>
-    <div class="custom-control custom-radio">
-        <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required>
-        <label class="custom-control-indicator" for="customControlValidation2"></label>
-        <label class="custom-control-label" for="customControlValidation2">Toggle this custom radio</label>
+    <div class="form-check form-checkradio">
+        <input type="radio" class="form-check-input" id="customControlValidation2" name="radio-stacked" required>
+        <label class="form-check-label" for="customControlValidation2">Toggle this custom radio</label>
     </div>
-    <div class="custom-control custom-radio mb-1">
-        <input type="radio" class="custom-control-input" id="customControlValidation3" name="radio-stacked" required>
-        <label class="custom-control-indicator" for="customControlValidation3"></label>
-        <label class="custom-control-label" for="customControlValidation3">Or toggle this other custom radio</label>
+    <div class="form-check form-checkradio mb-1">
+        <input type="radio" class="form-check-input" id="customControlValidation3" name="radio-stacked" required>
+        <label class="form-check-label" for="customControlValidation3">Or toggle this other custom radio</label>
         <div class="invalid-feedback">More example invalid feedback text</div>
     </div>
     <div class="form-group">
-        <select class="custom-select" required>
+        <select class="form-control" required>
             <option value="">Open this select menu</option>
             <option value="1">One</option>
             <option value="2">Two</option>
@@ -244,10 +253,15 @@
         </select>
         <div class="invalid-feedback">Example invalid custom select feedback</div>
     </div>
-    <div class="custom-file">
-        <input type="file" class="custom-file-input" id="validatedCustomFile" required>
-        <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
-        <div class="invalid-feedback">Example invalid custom file feedback</div>
+    <div class="form-group">
+        <div class="form-file">
+            <input type="file" class="form-file-input is-invalid" id="validatedCustomFile" required>
+            <label class="form-file-label" for="validatedCustomFile">
+                <span class="form-file-text">Choose file...</span>
+                <span class="form-file-button">Browse</span>
+            </label>
+            <div class="invalid-feedback">Example invalid custom file feedback</div>
+        </div>
     </div>
 </form>
 
@@ -339,7 +353,7 @@
         </div>
     </div>
     <div class="form-group">
-        <select class="custom-select has-validation-icon" required>
+        <select class="form-control has-validation-icon" required>
             <option value="">Open this select menu</option>
             <option value="1">One</option>
             <option value="2">Two</option>
@@ -349,9 +363,9 @@
     </div>
     <div class="input-group input-group-large mb-1">
         <div class="input-group-addon">
-            <span class="input-group-text" id="custom-select-addon">Options</span>
+            <span class="input-group-text" id="form-control-addon">Options</span>
         </div>
-        <select class="custom-select has-validation-icon input-group-end" aria-describedby="custom-select-addon" required>
+        <select class="form-control has-validation-icon input-group-end" aria-describedby="form-control-addon" required>
             <option value="">Choose...</option>
             <option value="1">One</option>
             <option value="2">Two</option>
