--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -172,7 +172,7 @@
   <span class="input-group-addon">
     <button class="btn" type="button">Go!</button>
   </span>
-  <select class="custom-select" aria-label="Select one">
+  <select class="form-control" aria-label="Select one">
     <option selected>Choose...</option>
     <option value="1">One</option>
     <option value="2">Two</option>
@@ -206,7 +206,7 @@
 <hr />
 
 <div class="input-group">
-  <select class="custom-select" aria-label="Select one">
+  <select class="form-control" aria-label="Select one">
     <option selected>Choose...</option>
     <option value="1">One</option>
     <option value="2">Two</option>
@@ -290,7 +290,7 @@
 
 <div class="d-flex">
   <div class="input-group">
-    <select class="custom-select" aria-label="Select one">
+    <select class="form-control" aria-label="Select one">
       <option selected>Choose...</option>
       <option value="1">One</option>
       <option value="2">Two</option>
@@ -429,63 +429,6 @@
     </span>
 </div>
 
-<h2>Input group size w/ Custom select</h2>
-
-<div class="input-group input-group-xlarge">
-    <select class="custom-select" aria-label="Select one">
-        <option selected>Choose...</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-    </select>
-    <span class="input-group-addon">
-        <button class="btn" type="button">Go!</button>
-    </span>
-</div>
-<div class="input-group input-group-large">
-    <select class="custom-select" aria-label="Select one">
-        <option selected>Choose...</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-    </select>
-    <span class="input-group-addon">
-        <button class="btn" type="button">Go!</button>
-    </span>
-</div>
-<div class="input-group">
-    <select class="custom-select" aria-label="Select one">
-        <option selected>Choose...</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-    </select>
-    <span class="input-group-addon">
-        <button class="btn" type="button">Go!</button>
-    </span>
-</div>
-<div class="input-group input-group-small">
-    <select class="custom-select" aria-label="Select one">
-        <option selected>Choose...</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-    </select>
-    <span class="input-group-addon">
-        <button class="btn" type="button">Go!</button>
-    </span>
-</div>
-<div class="input-group input-group-xsmall">
-    <select class="custom-select" aria-label="Select one">
-        <option selected>Choose...</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-    </select>
-    <span class="input-group-addon">
-        <button class="btn" type="button">Go!</button>
-    </span>
-</div>
 
 <h2>Feedback</h2>
 
@@ -611,7 +554,7 @@
 		<div class="input-group-addon">
             <button class="btn btn-outline-primary" type="button">All</button>
         </div>
-		<select class="custom-select" aria-label="Select one">
+		<select class="form-control" aria-label="Select one">
             <option selected>Choose...</option>
             <option value="1">One</option>
             <option value="2">Two</option>
@@ -649,7 +592,7 @@
             <option value="2">Two</option>
             <option value="3">Three</option>
         </select>
-		<select class="custom-select" aria-label="Select one">
+		<select class="form-control" aria-label="Select one">
             <option selected>Choose...</option>
             <option value="1">One</option>
             <option value="2">Two</option>
@@ -797,16 +740,22 @@
   <div class="input-group-addon">
     <div class="input-group-text">Upload</div>
   </div>
-  <div class="custom-file">
-    <input type="file" class="custom-file-input" id="custom-file-1">
-    <label class="custom-file-label" for="custom-file-1">Choose file...</label>
+  <div class="form-file">
+    <input type="file" class="form-file-input" id="form-file-1">
+    <label class="form-file-label" for="form-file-1">
+        <span class="form-file-text">Choose file...</span>
+        <span class="form-file-button">Browse</span>
+    </label>
   </div>
 </div>
 
 <div class="input-group">
-  <div class="custom-file">
-    <input type="file" class="custom-file-input" id="custom-file-2">
-    <label class="custom-file-label" for="custom-file-2">Choose file...</label>
+  <div class="form-file">
+    <input type="file" class="form-file-input" id="form-file-2">
+    <label class="form-file-label" for="form-file-2">
+        <span class="form-file-text">Choose file...</span>
+        <span class="form-file-button">Browse</span>
+    </label>
   </div>
   <div class="input-group-addon">
     <div class="input-group-text">Upload</div>
@@ -817,16 +766,22 @@
   <div class="input-group-addon">
     <button class="btn btn-outline-secondary" type="button">Button</button>
   </div>
-  <div class="custom-file">
-    <input type="file" class="custom-file-input" id="custom-file-3">
-    <label class="custom-file-label" for="custom-file-3">Choose file...</label>
+  <div class="form-file">
+    <input type="file" class="form-file-input" id="form-file-3">
+    <label class="form-file-label" for="form-file-3">
+        <span class="form-file-text">Choose file...</span>
+        <span class="form-file-button">Browse</span>
+    </label>
   </div>
 </div>
 
 <div class="input-group">
-  <div class="custom-file">
-    <input type="file" class="custom-file-input" id="custom-file-4">
-    <label class="custom-file-label" for="custom-file-4">Choose file...</label>
+  <div class="form-file">
+    <input type="file" class="form-file-input" id="form-file-4">
+    <label class="form-file-label" for="form-file-4">
+        <span class="form-file-text">Choose file...</span>
+        <span class="form-file-button">Browse</span>
+    </label>
   </div>
   <div class="input-group-addon">
     <button class="btn btn-outline-secondary" type="button">Button</button>
@@ -992,7 +947,7 @@
 
 <div class="input-group">
     <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
-    <select class="custom-select is-invalid input-group-end">
+    <select class="form-control is-invalid input-group-end">
         <option>1</option>
         <option>2</option>
         <option>3</option>
@@ -1001,18 +956,7 @@
 </div>
 
 <div class="input-group">
-    <select class="custom-select is-invalid">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-    </select>
-    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
-    <div class="invalid-feedback">Example invalid feedback.</div>
-</div>
-
-<div class="input-group">
-    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
-    <select class="custom-select is-invalid">
+    <select class="form-control is-invalid">
         <option>1</option>
         <option>2</option>
         <option>3</option>
@@ -1023,25 +967,45 @@
 
 <div class="input-group">
     <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
-    <div class="custom-file">
-        <input type="file" class="custom-file-input is-invalid" id="validateFile1">
-        <label class="custom-file-label" for="validateFile1">Choose file...</label>
+    <select class="form-control is-invalid">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+    </select>
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <div class="invalid-feedback">Example invalid feedback.</div>
+</div>
+
+<div class="input-group">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <div class="form-file">
+      <input type="file" class="form-file-input is-invalid" id="validate-file-1">
+      <label class="form-file-label" for="validate-file-1">
+        <span class="form-file-text">Choose file...</span>
+        <span class="form-file-button">Browse</span>
+      </label>
     </div>
 </div>
 
 <div class="input-group">
-    <div class="custom-file">
-        <input type="file" class="custom-file-input is-invalid" id="validateFile2">
-        <label class="custom-file-label" for="validateFile2">Choose file...</label>
+    <div class="form-file">
+      <input type="file" class="form-file-input is-invalid" id="validate-file-2">
+      <label class="form-file-label" for="validate-file-2">
+        <span class="form-file-text">Choose file...</span>
+        <span class="form-file-button">Browse</span>
+      </label>
     </div>
     <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
 </div>
 
 <div class="input-group">
     <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
-    <div class="custom-file">
-        <input type="file" class="custom-file-input is-invalid" id="validateFile3">
-        <label class="custom-file-label" for="validateFile3">Choose file...</label>
+    <div class="form-file">
+      <input type="file" class="form-file-input is-invalid" id="validate-file-3">
+      <label class="form-file-label" for="validate-file-3">
+        <span class="form-file-text">Choose file...</span>
+        <span class="form-file-button">Browse</span>
+      </label>
     </div>
     <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
 </div>
