Clean up redundant `col-12` use

--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<div class="container"><div class="row"><div class="col-12 col-sm-10 col-md-8 col-lg-6">
+<div class="container"><div class="row"><div class="col-sm-10 col-md-8 col-lg-6">
 <h1>Input Group</h1>
 
 <div class="input-group">
