--- a/test/visual/media-object.html
+++ b/test/visual/media-object.html
@@ -31,7 +31,7 @@ Holder.addTheme("gray", {
 </head>
 <body>
 
-<div class="container"><div class="row"><div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-4">
+<div class="container"><div class="row"><div class="col-sm-10 col-md-8 col-lg-6 col-xl-4">
     <h1>Media Object</h1>
 
     <div class="media">
