Widget-Dropown: Rebuild using recursive concept

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1112,7 +1112,7 @@ $(window).ready(function() {
                 </div>
             </div>
             <div class="mb-1">
-                <div class="dropdown dropup dropdown-menu-reverse">
+                <div class="dropdown dropup dropdown-menu-reverse d-inline-block">
                   <a href="#" role="button" data-cfw="dropdown" data-cfw-dropdown-container="body">
                     Reverse dropup w/ container<span class="caret ms-0_25"></span>
                   </a>
