start adding popper

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -9,6 +9,7 @@
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
 <script type="text/javascript" src="../../docs/4.0.0-alpha.5/assets/js/vendor/jquery.slim.min.js"></script>
+<script type="text/javascript" src="../../docs/4.0.0-alpha.5/assets/js/vendor/popper.min.js"></script>
 <script type="text/javascript" src="../../dist/js/figuration.js"></script>
 
 <script type="text/javascript" src="../../docs/4.0.0-alpha.5/assets/js/vendor/holder.min.js"></script>
