--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1002,6 +1002,7 @@ $(window).ready(function() {
                             '</button>';
                         $(shadowRoot.firstChild).CFW_Tooltip();
                         $(shadowRoot.getElementById('secondTooltip')).CFW_Tooltip({
+                            trigger: 'click',
                             container: shadowRoot
                         });
                     }
