--- a/test/js/index.html
+++ b/test/js/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-<!-- jQuery -->
+<!-- jQuery/Popper -->
 <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
-<script src="../../node_modules/popper.js/dist/umd/popper.min.js"</script>
+<script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script>
     // Disable jQuery event aliases to ensure we don't accidentally use any of them
     (function() {
