get popover mostly working

--- a/test/visual/tooltip.html
+++ b/test/visual/tooltip.html
@@ -44,7 +44,7 @@
 </head>
 <body>
 
-<button class="btn float-start" title="Tooltip at start" data-cfw="tooltip" data-cfw-tooltip-placement="reverse auto" data-cfw-tooltip-trigger="click">Tooltip at start</button>
+<button class="btn float-start" title="Tooltip at start" data-cfw="tooltip" data-cfw-tooltip-placement="reverse auto">Tooltip at start</button>
 
 <button class="btn" title="Tooltip at top" data-cfw="tooltip" data-cfw-tooltip-placement="top auto">Tooltip at top</button>
 
@@ -58,7 +58,7 @@
 <button class="btn" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-drag="true" data-cfw-popover-content="Wow">Popover at top</button>
 <button class="btn" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-drag="true" data-cfw-popover-content="Wow">Popover at top</button>
 
-<button class="btn btn-primary" data-cfw="modal" data-cfw-modal-target="#saveModal">New</button>
+<button class="btn btn-primary" data-cfw="modal" data-cfw-modal-target="#saveModal">Modal</button>
 
 <div class="modal" id="saveModal">
     <div class="modal-dialog">
