update test includes and fix some drag related popover issues

--- a/test/visual/button.html
+++ b/test/visual/button.html
@@ -9,7 +9,8 @@
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 <link rel="stylesheet" href="../../docs/4.0.0-alpha.5/assets/fonts/fontawesome/css/fontawesome-all.min.css">
 
-<script src="../../docs/4.0.0-alpha.5/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
+<script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script  src="../../dist/js/figuration.js"></script>
 
 </head>
