--- a/test/dev/player.html
+++ b/test/dev/player.html
@@ -9,7 +9,8 @@
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 <link rel="stylesheet" href="../../docs/4.0.0-alpha.5/assets/fonts/fontawesome/css/fontawesome-all.min.css">
 
-<script type="text/javascript" src="../../docs/4.0.0-alpha.5/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
+<script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script type="text/javascript" src="../../js/util.js"></script>
 <script type="text/javascript" src="../../js/drag.js"></script>
 <script type="text/javascript" src="../../js/dropdown.js"></script>
