--- a/test/visual/dropdown.html
+++ b/test/visual/dropdown.html
@@ -13,7 +13,8 @@
 <script src="../../dist/js/figuration.js"></script>
 -->
 
-<script src="../../docs/4.0.0-alpha.5/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
+<script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="../../js/util.js"></script>
 <script src="../../js/drag.js"></script>
 <script src="../../js/collapse.js"></script>
