--- a/test/visual/tooltip.html
+++ b/test/visual/tooltip.html
@@ -8,12 +8,8 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
-<!--
-<script src="../../docs/4.0.0-alpha.5/assets/js/vendor/jquery.slim.min.js"></script>
-<script src="../../dist/js/figuration.js"></script>
--->
-
-<script src="../../docs/4.0.0-alpha.5/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
+<script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="../../js/util.js"></script>
 <script src="../../js/drag.js"></script>
 <script src="../../js/collapse.js"></script>
@@ -57,7 +53,7 @@
 <button class="btn" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-drag="true" data-cfw-popover-content="Wow">Popover at top</button>
 <button class="btn" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-drag="true" data-cfw-popover-content="Wow">Popover at top</button>
 
-<button class="btn btn-primary" data-cfw="modal" data-cfw-modal-target="#saveModal">New</button>
+<button class="btn btn-primary" data-cfw="modal" data-cfw-modal-target="#saveModal">Modal</button>
 
 <div class="modal" id="saveModal">
     <div class="modal-dialog">
