--- a/test/js/index.html
+++ b/test/js/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 
-<!-- jQuery -->
-<script src="../../docs/4.0.0-alpha.5/assets/js/vendor/jquery.slim.min.js"></script>
+<!-- jQuery/Popper -->
+<script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
+<script src="../../node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script>
     // Disable jQuery event aliases to ensure we don't accidentally use any of them
     (function() {
